--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2380, 334)\n",
-      "Exercise Transform Data(Tuple) Count: 2380\n"
+      "Raw Data Count(Exercises, Days): (2396, 338)\n",
+      "Exercise Transform Data(Tuple) Count: 2396\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 334\n"
+      "Exercise Days: 338\n"
      ]
     }
    ],
@@ -199,8 +199,8 @@
      "output_type": "stream",
      "text": [
       "('Arnold Press[Dumbbell]', 30)\n",
-      "('Assisted Dips[Machine]', 59)\n",
-      "('Assisted Pull-Up[Machine]', 73)\n",
+      "('Assisted Dips[Machine]', 60)\n",
+      "('Assisted Pull-Up[Machine]', 74)\n",
       "('Back Extension', 44)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -215,7 +215,7 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 57)\n",
+      "('Chest Fly[Pec Deck Machine]', 58)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
       "('Deadlift[Barbell]', 103)\n",
@@ -224,7 +224,7 @@
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Dips', 20)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 71)\n",
+      "('Flat Bench Press[Barbell]', 72)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
@@ -240,26 +240,26 @@
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
       "('Hip Abduction[Machine]', 92)\n",
-      "('Hip Adduction[Machine]', 81)\n",
+      "('Hip Adduction[Machine]', 82)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 41)\n",
+      "('Incline Bench Press[Machine]', 42)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
       "('Lat Pulldown[Machine]', 114)\n",
-      "('Leg Extension[Machine]', 65)\n",
-      "('Long Pull Row[Cable]', 79)\n",
+      "('Leg Extension[Machine]', 66)\n",
+      "('Long Pull Row[Cable]', 80)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 129)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 21)\n",
+      "('Military Press[Smith Machine]', 22)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Low Row[Machine]', 1)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
@@ -269,20 +269,20 @@
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Plank', 104)\n",
       "('Power Leg Press[Machine]', 68)\n",
-      "('Power Press[Machine]', 1)\n",
+      "('Power Press[Machine]', 2)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 11)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 33)\n",
-      "('Running', 54)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 34)\n",
+      "('Running', 55)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 92)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 82)\n",
-      "('Shoulder Press[Machine]', 87)\n",
-      "('Side Lateral Raise[Dumbbell]', 80)\n",
+      "('Seated Row[Machine]', 83)\n",
+      "('Shoulder Press[Machine]', 88)\n",
+      "('Side Lateral Raise[Dumbbell]', 81)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -291,7 +291,7 @@
       "('Split Squat[Smith Machine]', 18)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 57)\n",
+      "('Straight Arm Pulldown[Cable]', 58)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
@@ -340,41 +340,41 @@
       "('Lat Pulldown[Machine]', 114)\n",
       "('Plank', 104)\n",
       "('Deadlift[Barbell]', 103)\n",
-      "('Seated Chest Press[Machine]', 92)\n",
       "('Hip Abduction[Machine]', 92)\n",
-      "('Shoulder Press[Machine]', 87)\n",
-      "('Seated Row[Machine]', 82)\n",
-      "('Hip Adduction[Machine]', 81)\n",
-      "('Side Lateral Raise[Dumbbell]', 80)\n",
-      "('Long Pull Row[Cable]', 79)\n",
-      "('Assisted Pull-Up[Machine]', 73)\n",
-      "('Flat Bench Press[Barbell]', 71)\n",
+      "('Seated Chest Press[Machine]', 92)\n",
+      "('Shoulder Press[Machine]', 88)\n",
+      "('Seated Row[Machine]', 83)\n",
+      "('Hip Adduction[Machine]', 82)\n",
+      "('Side Lateral Raise[Dumbbell]', 81)\n",
+      "('Long Pull Row[Cable]', 80)\n",
+      "('Assisted Pull-Up[Machine]', 74)\n",
+      "('Flat Bench Press[Barbell]', 72)\n",
       "('Power Leg Press[Machine]', 68)\n",
-      "('Leg Extension[Machine]', 65)\n",
-      "('Assisted Dips[Machine]', 59)\n",
-      "('Straight Arm Pulldown[Cable]', 57)\n",
-      "('Chest Fly[Pec Deck Machine]', 57)\n",
-      "('Running', 54)\n",
+      "('Leg Extension[Machine]', 66)\n",
+      "('Assisted Dips[Machine]', 60)\n",
+      "('Chest Fly[Pec Deck Machine]', 58)\n",
+      "('Straight Arm Pulldown[Cable]', 58)\n",
+      "('Running', 55)\n",
       "('Back Extension', 44)\n",
-      "('Incline Bench Press[Machine]', 41)\n",
+      "('Incline Bench Press[Machine]', 42)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 33)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 34)\n",
       "('Side-Lying Hip Abduction', 32)\n",
-      "('Arnold Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
+      "('Arnold Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
+      "('Military Press[Smith Machine]', 22)\n",
       "('Wrist Roller', 22)\n",
-      "('Military Press[Smith Machine]', 21)\n",
-      "('Dips', 20)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "('Dips', 20)\n",
       "('Bent Over Row[Barbell]', 19)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Split Squat[Smith Machine]', 18)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Split Squat[Smith Machine]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
@@ -382,71 +382,71 @@
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
-      "('Push-Up', 11)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Push-Up', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('Hip Thrust', 5)\n",
       "('Body-Weight Squat', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
+      "('Goblet Squat[Dumbbell]', 4)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Hanging Leg Raise', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Full Squat[Barbell]', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Power Press[Machine]', 2)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Trx Row', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
       "('Walking', 2)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Hip Abduction', 1)\n",
       "('Hip External Rotation', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Power Press[Machine]', 1)\n"
+      "('Hip Abduction', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n"
      ]
     }
    ],
