--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2482, 359)\n",
-      "Exercise Transform Data(Tuple) Count: 2482\n"
+      "Raw Data Count(Exercises, Days): (2504, 364)\n",
+      "Exercise Transform Data(Tuple) Count: 2504\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 359\n"
+      "Exercise Days: 364\n"
      ]
     }
    ],
@@ -199,8 +199,8 @@
      "output_type": "stream",
      "text": [
       "('Arnold Press[Dumbbell]', 34)\n",
-      "('Assisted Dips[Machine]', 64)\n",
-      "('Assisted Pull-Up[Machine]', 79)\n",
+      "('Assisted Dips[Machine]', 66)\n",
+      "('Assisted Pull-Up[Machine]', 80)\n",
       "('Back Extension', 44)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
@@ -215,10 +215,10 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 62)\n",
+      "('Chest Fly[Pec Deck Machine]', 64)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 108)\n",
+      "('Deadlift[Barbell]', 109)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
@@ -247,17 +247,17 @@
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Dumbbell]', 30)\n",
-      "('Incline Bench Press[Machine]', 47)\n",
+      "('Incline Bench Press[Machine]', 49)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 120)\n",
+      "('Lat Pulldown[Machine]', 121)\n",
       "('Leg Extension[Machine]', 71)\n",
-      "('Long Pull Row[Cable]', 85)\n",
+      "('Long Pull Row[Cable]', 86)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 133)\n",
+      "('Lying Leg Curls[Machine]', 134)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 23)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
@@ -268,20 +268,20 @@
       "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Plank', 104)\n",
-      "('Power Leg Press[Machine]', 72)\n",
+      "('Power Leg Press[Machine]', 73)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 39)\n",
-      "('Running', 57)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 40)\n",
+      "('Running', 62)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Seated Chest Press[Machine]', 93)\n",
+      "('Seated Chest Press[Machine]', 94)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 86)\n",
-      "('Shoulder Press[Machine]', 91)\n",
-      "('Side Lateral Raise[Dumbbell]', 86)\n",
+      "('Seated Row[Machine]', 87)\n",
+      "('Shoulder Press[Machine]', 92)\n",
+      "('Side Lateral Raise[Dumbbell]', 87)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -335,28 +335,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 133)\n",
-      "('Lat Pulldown[Machine]', 120)\n",
-      "('Deadlift[Barbell]', 108)\n",
+      "('Lying Leg Curls[Machine]', 134)\n",
+      "('Lat Pulldown[Machine]', 121)\n",
+      "('Deadlift[Barbell]', 109)\n",
       "('Plank', 104)\n",
       "('Hip Abduction[Machine]', 97)\n",
-      "('Seated Chest Press[Machine]', 93)\n",
-      "('Shoulder Press[Machine]', 91)\n",
+      "('Seated Chest Press[Machine]', 94)\n",
+      "('Shoulder Press[Machine]', 92)\n",
+      "('Side Lateral Raise[Dumbbell]', 87)\n",
       "('Hip Adduction[Machine]', 87)\n",
-      "('Side Lateral Raise[Dumbbell]', 86)\n",
-      "('Seated Row[Machine]', 86)\n",
-      "('Long Pull Row[Cable]', 85)\n",
-      "('Assisted Pull-Up[Machine]', 79)\n",
+      "('Seated Row[Machine]', 87)\n",
+      "('Long Pull Row[Cable]', 86)\n",
+      "('Assisted Pull-Up[Machine]', 80)\n",
       "('Flat Bench Press[Barbell]', 75)\n",
-      "('Power Leg Press[Machine]', 72)\n",
+      "('Power Leg Press[Machine]', 73)\n",
       "('Leg Extension[Machine]', 71)\n",
-      "('Assisted Dips[Machine]', 64)\n",
-      "('Chest Fly[Pec Deck Machine]', 62)\n",
+      "('Assisted Dips[Machine]', 66)\n",
+      "('Chest Fly[Pec Deck Machine]', 64)\n",
+      "('Running', 62)\n",
       "('Straight Arm Pulldown[Cable]', 59)\n",
-      "('Running', 57)\n",
-      "('Incline Bench Press[Machine]', 47)\n",
+      "('Incline Bench Press[Machine]', 49)\n",
       "('Back Extension', 44)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 39)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 40)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Arnold Press[Dumbbell]', 34)\n",
@@ -366,85 +366,85 @@
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Military Press[Smith Machine]', 23)\n",
       "('Wrist Roller', 22)\n",
-      "('Bent Over Row[Barbell]', 20)\n",
       "('Dips', 20)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
-      "('Upright Row[EZ Curl Bar]', 19)\n",
+      "('Bent Over Row[Barbell]', 20)\n",
       "('Split Squat[Smith Machine]', 19)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Upright Row[EZ Curl Bar]', 19)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Hip Bridge', 15)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
       "('Deadlift[Kettlebell]', 12)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Push-Up', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Body-Weight Squat', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Squat[Dumbbell]', 5)\n",
       "('Hip Thrust', 5)\n",
-      "('Reverse Crunch', 4)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Reverse Crunch', 4)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Hanging Leg Raise', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Dead Bug', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
-      "('Walking', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Walking', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Full Squat[Barbell]', 2)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Trx Row', 2)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Hip Abduction', 1)\n",
       "('Split Squat', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
       "('Trx Lunge', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n"
+      "('Vipr Overhead Squat', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n"
      ]
     }
    ],
