--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2504, 364)\n",
-      "Exercise Transform Data(Tuple) Count: 2504\n"
+      "Raw Data Count(Exercises, Days): (2518, 367)\n",
+      "Exercise Transform Data(Tuple) Count: 2518\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 364\n"
+      "Exercise Days: 367\n"
      ]
     }
    ],
@@ -200,8 +200,8 @@
      "text": [
       "('Arnold Press[Dumbbell]', 34)\n",
       "('Assisted Dips[Machine]', 66)\n",
-      "('Assisted Pull-Up[Machine]', 80)\n",
-      "('Back Extension', 44)\n",
+      "('Assisted Pull-Up[Machine]', 81)\n",
+      "('Back Extension', 45)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
@@ -218,7 +218,7 @@
       "('Chest Fly[Pec Deck Machine]', 64)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 109)\n",
+      "('Deadlift[Barbell]', 110)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
@@ -233,13 +233,13 @@
       "('Full Squat[Smith Machine]', 2)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Hack Squat[Machine]', 6)\n",
+      "('Hack Squat[Machine]', 7)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Hanging Leg Raise', 3)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
-      "('Hip Abduction[Machine]', 97)\n",
+      "('Hip Abduction[Machine]', 98)\n",
       "('Hip Adduction[Machine]', 87)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
@@ -253,13 +253,13 @@
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 121)\n",
-      "('Leg Extension[Machine]', 71)\n",
-      "('Long Pull Row[Cable]', 86)\n",
+      "('Lat Pulldown[Machine]', 122)\n",
+      "('Leg Extension[Machine]', 72)\n",
+      "('Long Pull Row[Cable]', 87)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 134)\n",
+      "('Lying Leg Curls[Machine]', 135)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 23)\n",
+      "('Military Press[Smith Machine]', 24)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Low Row[Machine]', 1)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
@@ -273,15 +273,15 @@
       "('Push-Up', 12)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 40)\n",
-      "('Running', 62)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 41)\n",
+      "('Running', 63)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Seated Chest Press[Machine]', 94)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 87)\n",
+      "('Seated Row[Machine]', 88)\n",
       "('Shoulder Press[Machine]', 92)\n",
-      "('Side Lateral Raise[Dumbbell]', 87)\n",
+      "('Side Lateral Raise[Dumbbell]', 88)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
@@ -335,28 +335,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 134)\n",
-      "('Lat Pulldown[Machine]', 121)\n",
-      "('Deadlift[Barbell]', 109)\n",
+      "('Lying Leg Curls[Machine]', 135)\n",
+      "('Lat Pulldown[Machine]', 122)\n",
+      "('Deadlift[Barbell]', 110)\n",
       "('Plank', 104)\n",
-      "('Hip Abduction[Machine]', 97)\n",
+      "('Hip Abduction[Machine]', 98)\n",
       "('Seated Chest Press[Machine]', 94)\n",
       "('Shoulder Press[Machine]', 92)\n",
-      "('Side Lateral Raise[Dumbbell]', 87)\n",
+      "('Side Lateral Raise[Dumbbell]', 88)\n",
+      "('Seated Row[Machine]', 88)\n",
+      "('Long Pull Row[Cable]', 87)\n",
       "('Hip Adduction[Machine]', 87)\n",
-      "('Seated Row[Machine]', 87)\n",
-      "('Long Pull Row[Cable]', 86)\n",
-      "('Assisted Pull-Up[Machine]', 80)\n",
+      "('Assisted Pull-Up[Machine]', 81)\n",
       "('Flat Bench Press[Barbell]', 75)\n",
       "('Power Leg Press[Machine]', 73)\n",
-      "('Leg Extension[Machine]', 71)\n",
+      "('Leg Extension[Machine]', 72)\n",
       "('Assisted Dips[Machine]', 66)\n",
       "('Chest Fly[Pec Deck Machine]', 64)\n",
-      "('Running', 62)\n",
+      "('Running', 63)\n",
       "('Straight Arm Pulldown[Cable]', 59)\n",
       "('Incline Bench Press[Machine]', 49)\n",
-      "('Back Extension', 44)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 40)\n",
+      "('Back Extension', 45)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 41)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Arnold Press[Dumbbell]', 34)\n",
@@ -364,24 +364,24 @@
       "('Incline Bench Press[Dumbbell]', 30)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
-      "('Military Press[Smith Machine]', 23)\n",
+      "('Military Press[Smith Machine]', 24)\n",
       "('Wrist Roller', 22)\n",
       "('Dips', 20)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Bent Over Row[Barbell]', 20)\n",
-      "('Split Squat[Smith Machine]', 19)\n",
       "('Upright Row[EZ Curl Bar]', 19)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Split Squat[Smith Machine]', 19)\n",
       "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Goblet Squat[Kettlebell]', 18)\n",
       "('Hip Bridge', 15)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Push-Up', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Push-Up', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
@@ -389,62 +389,62 @@
       "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
+      "('Hack Squat[Machine]', 7)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Hack Squat[Machine]', 6)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Hip Thrust', 5)\n",
       "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Body-Weight Squat', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Goblet Squat[Dumbbell]', 4)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Hanging Leg Raise', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Full Squat[Smith Machine]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Dead Bug', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Walking', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
       "('Trx Row', 2)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
       "('Trx Lunge', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
       "('Hip Abduction', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('One Arm Low Row[Machine]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n"
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('One Arm Low Row[Machine]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n"
      ]
     }
    ],
